# fastapi_project

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml
fastapi_project/: app.py  database.py  main.py  movie_routers.py  settings.py
fastapi_project/models/: movie_model.py
tests/: test_status.py
